# config-versioned

./: CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: docs.yml
docs/: api.rst  conf.py  getting_started.rst  index.rst  installation.rst
src/config_versioned/: __init__.py  autoread.py  autowrite.py  config.py
src/versioned_config/: __init__.py  autoread.py  autowrite.py  config.py  utilities.py
src/versioning/: __init__.py  autoread.py  autowrite.py  config.py
tests/: conftest.py  test_autoread_autowrite.py  test_config.py
